--- a/menopur.html
+++ b/menopur.html
@@ -19,6 +19,16 @@
                 min-height: calc(100vh - 112px);
             }
         </style>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-C5MC9Z1EK0"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-C5MC9Z1EK0');
+        </script>
     </head>
     <body>
 
@@ -51,9 +61,9 @@
             <div class="row h-100">
 
                 <!-- Sidebar -->
-                <div class="sidebar col-md-2 bg-light d-none d-md-block">
+                <div class="sidebar col-2 bg-light d-none d-lg-block">
                     <!-- Add your sidebar content here -->
-                    <h3>Medicine</h3>
+                    <div class="h3 text-left">Medicines</div>
                     <ul class="list-group">
                         <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="cetrotide.html">
                             Cetrotide</a>
@@ -68,7 +78,7 @@
                 </div>
     
                 <!-- Main Content -->
-                <div class="col-sm-5">
+                <div class="col-sm-6 col-lg-5">
 
                     <div  id="input-col" class="mt-2 align-middle border rounded border-primary p-3">
 
@@ -114,7 +124,7 @@
 
 
                 <!-- Output: When med runs out -->
-                <div class="col-sm-5">
+                <div class="col-sm-6 col-lg-5">
                     <div id="output-col" class="align-middle text-center mt-2 mr-2 border rounded border-primary">
                         <div class="h5 mt-3 ">Medicine will run out on: </div>
                         <div class="h4" id="run-out"></div>
@@ -125,17 +135,17 @@
             </div>
         </div>
 
-        <footer class="bg-light text-center text-lg-start">
+        <div class="footer fixed-bottom bg-light text-center text-lg-start">
             <!-- Copyright -->
             <div class="text-center p-3">
               <small>This website was made by Oliver Stringham.</small>
-              <small>
+              <small>To show your support, you can 
                 <a class="text-dark" href="https://www.buymeacoffee.com/oliverstringham" target="_blank">
-                    You can buy me a coffee ☕ to show your support.</a>
+                    buy me a coffee ☕</a>.
             </small>
             </div>
             <!-- Copyright -->
-        </footer>
+        </div>
 
         
         <!-- jquery -->
