--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,13 @@
     
     
     <ul class="list-group">
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="meds/cetrotide">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/cetrotide">
             Cetrotide</a>
         </li>
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="meds/menopur">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/menopur">
             Menopur</a>
         </li>
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="meds/gonalf">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/gonalf">
             Gonal-f Pen</a>
         </li>
     </ul>
