--- a/public/meds/menopur/index.html
+++ b/public/meds/menopur/index.html
@@ -53,10 +53,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-            <a class="nav-link" href='about'>About</a>
+            <a class="nav-link" href='/about'>About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href='disclaimer'>Disclaimer</a>
+            <a class="nav-link" href='/disclaimer'>Disclaimer</a>
         </li>
         </ul>
     </div>
