--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +45,7 @@
   
 <nav class="navbar navbar-expand-lg navbar-light bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
-    <a class="navbar-brand" href="#">Fertility Medicine Dosing</a>
+    <a class="navbar-brand" href="/about">Fertility Medicine Dosing</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -82,9 +82,7 @@
         </li>
     </ul>
 </div>
-      <div class="col-sm-12 col-lg-10 mb-3">
 
-</div>
     </div>
   </div>
  
