--- a/public/disclaimer/index.html
+++ b/public/disclaimer/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,9 +52,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-            <a class="nav-link" href='/about'>About</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link" href='/about'>About</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Select Medicine
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/meds/cetrotide">Cetrotide</a>
+                    <a class="dropdown-item" href="/meds/menopur">Menopur</a>
+                    <a class="dropdown-item" href="/meds/gonalf">Gonal-f Pen</a>
+                </div>
+            </li>
         <li class="nav-item">
             <a class="nav-link" href='/disclaimer'>Disclaimer</a>
         </li>
