--- a/public/meds/menopur/index.html
+++ b/public/meds/menopur/index.html
@@ -102,6 +102,7 @@
         <div class="mb-3 text-center">
             <label for="" class="form-label">Number of vials on hand: </label>
             <input class="form-control-md text-center" type="number" pattern="[0-9]*"
+                    onfocus="this.select();"        
                     id="quantity" name="quantity" min="1" max="50">
             <small hidden id="valVials" class="form-text text-danger">Input a number</small>
         </div>
