--- a/public/about/index.html
+++ b/public/about/index.html
@@ -55,16 +55,20 @@
             <li class="nav-item">
                 <a class="nav-link" href='/about'>About</a>
             </li>
+
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Select Medicine
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Medicine
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/meds/cetrotide">Cetrotide</a>
                     <a class="dropdown-item" href="/meds/menopur">Menopur</a>
                     <a class="dropdown-item" href="/meds/gonalf">Gonal-f Pen</a>
-                </div>
-            </li>
+                </ul>
+              </li>
+        <li class="nav-item">
+            <a class="nav-link" href='/contact'>Contact</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href='/disclaimer'>Disclaimer</a>
         </li>
