--- a/public/meds/menopur/index.html
+++ b/public/meds/menopur/index.html
@@ -65,7 +65,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/meds/cetrotide">Cetrotide</a>
                     <a class="dropdown-item" href="/meds/menopur">Menopur</a>
-                    <a class="dropdown-item" href="/meds/gonalf">Gonal-f Pen</a>
+                    <a class="dropdown-item" href="/meds/gonal-f">Gonal-f Pen</a>
                 </ul>
               </li>
         <li class="nav-item">
@@ -93,7 +93,7 @@
         <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/menopur">
             Menopur</a>
         </li>
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/gonalf">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/gonal-f">
             Gonal-f Pen</a>
         </li>
     </ul>
