--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -54,9 +54,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href='/about'>About</a>
-            </li>
+            
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,14 +94,14 @@
         </li>
     </ul>
 </div>
-        <div class="col-sm-12 col-lg-10 mb-3 mt-3">
+        <div class="col-sm-12 col-md-12 col-lg-8 mb-3 mt-3">
 
             <!-- modify this form HTML and place wherever you want your form -->
-<div class="container">
+<!-- <div class="container"> -->
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-push-2 col-md-push-3 form__container">
       <!-- <h2>Let's work together</h2> -->
-      <h5>If you have any feedback or identiy any errors please contact me using the below form.</h5>
+      <h5>If you have any feedback or identify any errors, please contact me using the below form.</h5>
       <form action="https://formspree.io/f/xaygenoo" role="form" method="POST" autocomplete="on">
         <div class="form-group">
           <label for="name">Your Name</label>
@@ -126,7 +124,7 @@
     </div>
   </div>
 </div>
-</div>
+<!-- </div> -->
             
         </div>
     </div>
