--- a/public/disclaimer/index.html
+++ b/public/disclaimer/index.html
@@ -54,9 +54,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href='/about'>About</a>
-            </li>
+            
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,7 +94,7 @@
         </li>
     </ul>
 </div>
-        <div class="col-sm-12 col-lg-10 mb-3 mt-3">
+        <div class="col-sm-12 col-md-12 col-lg-8 mb-3 mt-3">
 
             <h3 id="disclaimer">DISCLAIMER</h3>
 <p>Last updated August 05, 2023</p>
