--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href='/about'>About</a>
-            </li>
+            
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -98,6 +96,36 @@
     </ul>
 </div>
 
+        <div class="col-xs-12 col-sm-8 col-md-6 ml-2 mt-3">
+          <div class="h4">
+            This website is designed to assist fertility nurses calculate doses for common fertility medicines.
+          </div>
+
+          <div class="row">
+
+            <div class="col-xs-12 col-sm-8 col-md-6">
+              <div class="h6">
+                  The information calculated is:
+              </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">The date the patient finishes their medicine</li>
+                  <li class="list-group-item">How much more medicine you might need to order or how much is left over</li>
+                </ul>
+            </div>
+
+            <div class="col-xs-12 col-sm-8 col-md-6">
+              <div class="h6">
+                The information the user provides is:
+              </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">The current amount of medicine on hand</li>
+                  <li class="list-group-item">The dosage per day</li>
+                </ul>
+            </div>
+
+          </div>
+
+        </div>
     </div>
   </div>
  
