--- a/public/meds/menopur/index.html
+++ b/public/meds/menopur/index.html
@@ -37,6 +37,9 @@
         gtag('config', 'G-C5MC9Z1EK0');
     </script>
 
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8121768515299368" crossorigin="anonymous"></script>
+
 </head>
 
 
